add mobile support

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
         are.
       </p>
 
-      <canvas id="draw-space" width="280" height="280"></canvas>
+      <canvas id="draw-space" height="280" width="280"></canvas>
 
       <div class="button-container">
         <a class="button" id="clear-button">Clear</a>
